grammars/Powershell/test/Powershell2Parser.java
// Generated from Powershell2.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Powershell2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, PostfixOperator=54, TYPELITERAL=55, ExpandableStringToken=56, 
		LiteralStringToken=57, VariableToken=58, ParameterToken=59, ParameterArgumentToken=60, 
		PropertyNameToken=61, CmdletName=62, NEWLINES=63, MultiLineComment=64, 
		SingleLineComment=65, WhiteSpaces=66, ASSIGNMENTOPERATOR=67, NumberToken=68, 
		DEQ=69, DNE=70, DGE=71, DGT=72, DLT=73, DLE=74, DIEQ=75, DINE=76, DIGE=77, 
		DIGT=78, DILT=79, DILE=80, DCEQ=81, DCNE=82, DCGE=83, DCGT=84, DCLT=85, 
		CLE=86, DLIKE=87, DNOTLIKE=88, DMATCH=89, DNOTMATCH=90, DILIKE=91, DINOTLIKE=92, 
		DIMATCH=93, DINOTMATCH=94, DCLIKE=95, DCNOTLIKE=96, DCMATCH=97, DCNOTMATCH=98, 
		DCONTAINS=99, DNOTCONTAINS=100, DICONTAINS=101, DINOTCONTAINS=102, DCCONTAINS=103, 
		DCNOTCONTAINS=104, DISNOT=105, DIS=106, DAS=107, DREPLACE=108, DIREPLACE=109, 
		DCREPLACE=110, STATEMENTTERMINATOR=111, LABEL=112;
	public static final int
		RULE_startRule = 0, RULE_statementList = 1, RULE_statement = 2, RULE_labeledStatement = 3, 
		RULE_pipeline = 4, RULE_assignmentExpression = 5, RULE_lvalueExpression = 6, 
		RULE_lvalue = 7, RULE_simplelvalue = 8, RULE_firstPipelineElement = 9, 
		RULE_cmdletCall = 10, RULE_commandInvocationOperator = 11, RULE_commandElement = 12, 
		RULE_redirection = 13, RULE_statementBlock = 14, RULE_ifStatement = 15, 
		RULE_elseifClause = 16, RULE_elseClause = 17, RULE_switchStatement = 18, 
		RULE_switchParameter = 19, RULE_switchCondition = 20, RULE_switchFilename = 21, 
		RULE_switchBody = 22, RULE_switchClause = 23, RULE_switchClauseCondition = 24, 
		RULE_propertyorarrayreference = 25, RULE_propertyorarrayreferenceoperator = 26, 
		RULE_trapStatement = 27, RULE_flowControlStatement = 28, RULE_labelExpression = 29, 
		RULE_expression = 30, RULE_value = 31, RULE_comparisonOperator = 32, RULE_redirectionOperator = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "statementList", "statement", "labeledStatement", "pipeline", 
			"assignmentExpression", "lvalueExpression", "lvalue", "simplelvalue", 
			"firstPipelineElement", "cmdletCall", "commandInvocationOperator", "commandElement", 
			"redirection", "statementBlock", "ifStatement", "elseifClause", "elseClause", 
			"switchStatement", "switchParameter", "switchCondition", "switchFilename", 
			"switchBody", "switchClause", "switchClauseCondition", "propertyorarrayreference", 
			"propertyorarrayreferenceoperator", "trapStatement", "flowControlStatement", 
			"labelExpression", "expression", "value", "comparisonOperator", "redirectionOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "'['", "']'", "'&'", "'.'", "'{'", "'}'", "'if'", "'('", 
			"')'", "'elseif'", "'else'", "'switch'", "'-regex'", "'-wildcard'", "'-exact'", 
			"'-casesensitive'", "'-parallel'", "'-file'", "'default'", "'trap'", 
			"'break'", "'continue'", "'throw'", "'return'", "'exit'", "'::'", "'-join'", 
			"'-split'", "'++'", "'--'", "'+'", "'-'", "'-not'", "'-bnot'", "'!'", 
			"'..'", "'-f'", "'*'", "'/'", "'%'", "'-bxor'", "'-bor'", "'-band'", 
			"'-xor'", "'-or'", "'-and'", "'2>&1'", "'3>&1'", "'4>&1'", "'5>&1'", 
			"'6>&1'", "'1>&2'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "PostfixOperator", "TYPELITERAL", 
			"ExpandableStringToken", "LiteralStringToken", "VariableToken", "ParameterToken", 
			"ParameterArgumentToken", "PropertyNameToken", "CmdletName", "NEWLINES", 
			"MultiLineComment", "SingleLineComment", "WhiteSpaces", "ASSIGNMENTOPERATOR", 
			"NumberToken", "DEQ", "DNE", "DGE", "DGT", "DLT", "DLE", "DIEQ", "DINE", 
			"DIGE", "DIGT", "DILT", "DILE", "DCEQ", "DCNE", "DCGE", "DCGT", "DCLT", 
			"CLE", "DLIKE", "DNOTLIKE", "DMATCH", "DNOTMATCH", "DILIKE", "DINOTLIKE", 
			"DIMATCH", "DINOTMATCH", "DCLIKE", "DCNOTLIKE", "DCMATCH", "DCNOTMATCH", 
			"DCONTAINS", "DNOTCONTAINS", "DICONTAINS", "DINOTCONTAINS", "DCCONTAINS", 
			"DCNOTCONTAINS", "DISNOT", "DIS", "DAS", "DREPLACE", "DIREPLACE", "DCREPLACE", 
			"STATEMENTTERMINATOR", "LABEL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Powershell2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Powershell2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartRuleContext extends ParserRuleContext {
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Powershell2Parser.EOF, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterStartRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitStartRule(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			statementList();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> STATEMENTTERMINATOR() { return getTokens(Powershell2Parser.STATEMENTTERMINATOR); }
		public TerminalNode STATEMENTTERMINATOR(int i) {
			return getToken(Powershell2Parser.STATEMENTTERMINATOR, i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitStatementList(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			statement();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATEMENTTERMINATOR) {
				{
				{
				setState(72);
				match(STATEMENTTERMINATOR);
				setState(73);
				statement();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public LabeledStatementContext labeledStatement() {
			return getRuleContext(LabeledStatementContext.class,0);
		}
		public TerminalNode LABEL() { return getToken(Powershell2Parser.LABEL, 0); }
		public FlowControlStatementContext flowControlStatement() {
			return getRuleContext(FlowControlStatementContext.class,0);
		}
		public TrapStatementContext trapStatement() {
			return getRuleContext(TrapStatementContext.class,0);
		}
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LABEL) {
					{
					setState(80);
					match(LABEL);
					}
				}

				setState(83);
				labeledStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				flowControlStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				trapStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				pipeline();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabeledStatementContext extends ParserRuleContext {
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public LabeledStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labeledStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterLabeledStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitLabeledStatement(this);
		}
	}

	public final LabeledStatementContext labeledStatement() throws RecognitionException {
		LabeledStatementContext _localctx = new LabeledStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_labeledStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			switchStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineContext extends ParserRuleContext {
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public FirstPipelineElementContext firstPipelineElement() {
			return getRuleContext(FirstPipelineElementContext.class,0);
		}
		public List<CmdletCallContext> cmdletCall() {
			return getRuleContexts(CmdletCallContext.class);
		}
		public CmdletCallContext cmdletCall(int i) {
			return getRuleContext(CmdletCallContext.class,i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitPipeline(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pipeline);
		int _la;
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				assignmentExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				firstPipelineElement();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(93);
					match(T__0);
					setState(94);
					cmdletCall();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentExpressionContext extends ParserRuleContext {
		public LvalueExpressionContext lvalueExpression() {
			return getRuleContext(LvalueExpressionContext.class,0);
		}
		public TerminalNode ASSIGNMENTOPERATOR() { return getToken(Powershell2Parser.ASSIGNMENTOPERATOR, 0); }
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public AssignmentExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterAssignmentExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitAssignmentExpression(this);
		}
	}

	public final AssignmentExpressionContext assignmentExpression() throws RecognitionException {
		AssignmentExpressionContext _localctx = new AssignmentExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignmentExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			lvalueExpression();
			setState(103);
			match(ASSIGNMENTOPERATOR);
			setState(104);
			pipeline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LvalueExpressionContext extends ParserRuleContext {
		public List<LvalueContext> lvalue() {
			return getRuleContexts(LvalueContext.class);
		}
		public LvalueContext lvalue(int i) {
			return getRuleContext(LvalueContext.class,i);
		}
		public LvalueExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lvalueExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterLvalueExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitLvalueExpression(this);
		}
	}

	public final LvalueExpressionContext lvalueExpression() throws RecognitionException {
		LvalueExpressionContext _localctx = new LvalueExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lvalueExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			lvalue();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(107);
					match(T__1);
					setState(108);
					lvalue();
					setState(109);
					match(T__2);
					}
					break;
				case T__0:
					{
					setState(111);
					match(T__0);
					setState(112);
					lvalue();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LvalueContext extends ParserRuleContext {
		public SimplelvalueContext simplelvalue() {
			return getRuleContext(SimplelvalueContext.class,0);
		}
		public List<PropertyorarrayreferenceoperatorContext> propertyorarrayreferenceoperator() {
			return getRuleContexts(PropertyorarrayreferenceoperatorContext.class);
		}
		public PropertyorarrayreferenceoperatorContext propertyorarrayreferenceoperator(int i) {
			return getRuleContext(PropertyorarrayreferenceoperatorContext.class,i);
		}
		public LvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterLvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitLvalue(this);
		}
	}

	public final LvalueContext lvalue() throws RecognitionException {
		LvalueContext _localctx = new LvalueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lvalue);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			simplelvalue();
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					propertyorarrayreferenceoperator();
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimplelvalueContext extends ParserRuleContext {
		public TerminalNode VariableToken() { return getToken(Powershell2Parser.VariableToken, 0); }
		public List<TerminalNode> TYPELITERAL() { return getTokens(Powershell2Parser.TYPELITERAL); }
		public TerminalNode TYPELITERAL(int i) {
			return getToken(Powershell2Parser.TYPELITERAL, i);
		}
		public SimplelvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simplelvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).enterSimplelvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Powershell2Listener ) ((Powershell2Listener)listener).exitSimplelvalue(this);
		}
	}

	public final SimplelvalueContext simplelvalue() throws RecognitionException {
		SimplelvalueContext _localctx = new SimplelvalueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_simplelvalue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPELITERAL) {
				{
				{
				setState(125);
				match(TYPELITERAL);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(VariableToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
